--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>heaven of heal</title>
 </head>
 <body>
-   <img src="hoh.name.jpg" alt="">
-   <p>Dr.Sujitha P  BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</p></p>
+<img src="hoh.logo.png""hoh.name.jpg" alt="">
+<p>Dr.Sujitha P  BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</p></p>
 <p>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</p>
-                                <img src="hoh.logo.png" alt=""> 
-   <p>heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
+<img src="hoh.logo.png" alt=""> 
+<p>heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
 
-                       <p>address: No. 2/249, padavattamman kovil street, thalambur, chennai-600130</p>
+<p>address: No. 2/249, padavattamman kovil street, thalambur, chennai-600130</p>
 </body>
 </html>
