--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>heaven of heal</title>
 </head>
 <body>
-<img src="hoh.logo.png hoh.name.jpg" alt="">
+<img src="hoh.name.jpg" alt="">
 <p>Dr.Sujitha P  BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</p></p>
 <p>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</p>
 <img src="hoh.logo.png" alt=""> 
