--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <img src="hoh.name.jpg" alt="">
-<p>Dr.Brighston P  BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</p>
+<p>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</p>
 <p>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</p>
 <img src="hoh.logo.png" alt="">
 <p>ABOUT US:</p>
