--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
 <img src="hoh.logo.png" alt="">
 <h2>> Physiotherapy</h2>
-<img src="pain.img.jpg" alt="">
+<img width="1000px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
 <p>HOT OR COLD THERAPY: Both hot and cold therapy help to manage pain but each has a different effect on your body. Hot therapy involves using hot packs, warm towels, or heating pads to increase blood flow and relax muscles to reduce stiffness. Cold therapy involves using ice packs, cold compresses, or ice baths to reduce swelling and inflammation, and to numb an area in order to provide pain relief.</p>
 <p>ELECTRICAL STIMULATION IFT: This type of therapy uses electrical impulses to stimulate the nerves and muscles in the affected area. It helps to manage pain by temporarily blocking pain signals from reaching your brain, by releasing naturally produced pain-relieving chemicals called endorphins which help to reduce pain and promote a sense of well-being, and by relaxing muscles and reducing painful spasms. Depending on the nature of your condition, it may involve the use of a TENS, NMES or IFC unit to deliver the electrical stimulation.</p>
