--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>heaven of heal</title>
 </head>
 <body>
-<img src="hoh.name.jpg" alt="">
+<img width="1300px" src="hoh.name.jpg" alt="">
 <h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2>
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
 <img src="hoh.logo.png" alt="">
@@ -19,7 +19,7 @@
 <p>TRACTION: Traction is typically used to manage pain in the neck and lower back. It helps by applying a gentle pulling force to the affected area and stretching the spine, thereby reducing pressure on the nerves and discs. Most often this involves a manual traction table.</p>
 <p>MANUAL THERAPY: Manual therapy is a hands-on treatment that involves the manipulation of muscles, joints, and soft tissues to help manage pain and improve mobility. It includes massage therapy, myofascial release, soft tissue mobilization, and joint mobilization. Massage therapy helps to reduce muscle tension, increase blood flow, and promote relaxation using various techniques such as stroking, kneading, and friction. Myofascial release helps to reduce pain and improve flexibility through the manipulation of the fascia, which is a layer of connective tissue that surrounds muscles and organs. Soft tissue mobilization helps to reduce pain and improve flexibility by manipulating the ligaments, tendons, and fascia surrounding a joint. And, joint mobilization helps to reduce pain and improve mobility by gently moving a joint through its range of motion.  </p>
 <h2>> Pediatric Physiotherapy</h2>
-<img src="pediatric2.img.jpg" alt="">
+<img width="1300px" src="pediatric2.img.jpg" alt="">
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
