--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 <p>MANUAL THERAPY: Manual therapy is a hands-on treatment that involves the manipulation of muscles, joints, and soft tissues to help manage pain and improve mobility. It includes massage therapy, myofascial release, soft tissue mobilization, and joint mobilization. Massage therapy helps to reduce muscle tension, increase blood flow, and promote relaxation using various techniques such as stroking, kneading, and friction. Myofascial release helps to reduce pain and improve flexibility through the manipulation of the fascia, which is a layer of connective tissue that surrounds muscles and organs. Soft tissue mobilization helps to reduce pain and improve flexibility by manipulating the ligaments, tendons, and fascia surrounding a joint. And, joint mobilization helps to reduce pain and improve mobility by gently moving a joint through its range of motion.  </p>
 <h2>> Pediatric Physiotherapy</h2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
-<h3>Pediatric Physiotherapy Treatment </h3>
+<h2>Pediatric Physiotherapy Treatment </h2>
+<h2>Neonatal Physiotherapy:</h2>
+<h1>These are a set of management protocols focusing on neonates to help them survive. This includes chest physiotherapy, positioning, orofacial stimulation, passive movements, and multimodal sensory-motor stimulation.</h1>
+<h2>Neurodevelopmental Physiotherapy:</h2>
+<h1>This form of therapy is mainly focused on kids who have neurological disorders with gross motor developmental delay or kids with gross motor developmental delay without any other central nervous system insults. The techniques here aim to achieve gross motor milestones, manage spasticity, and improve balance and coordination. Some techniques include NDT(Neuro Developmental Therapy), CIMT (Constraint Induced Movement Therapy), Vojta technique, taping techniques, functional electrical stimulation, balance and coordination training, including Frenkels exercises. </h1>
+<h2>Orthopedic Pediatric Physiotherapy:</h2>
+<h1>Kids who receive this service are largely those involved in sports, have congenital deformities, or have met with any injury to their muscles or ligaments. The approach is completely different, with strategies that include treating pain and spasms, improving strength and endurance, and correcting deformities and posture, with the aim of eventually bringing them back to their normal daily activities.
+
+Here the treatment includes using machines to relieve pain and spasms, scar mobilization, stretching and strengthening of the muscles, endurance training, contrast therapy, and heat and cold therapy.</h1>
+<h2>Cardiopulmonary Pediatric Physiotherapy:</h2>
+<h1>While the principles of the techniques used here remain quite the same as adults, the application change as this population is constantly growing. Techniques include chest physiotherapy, positioning, breathing exercises, respiratory muscle strengthening, and energy conservation techniques.</h1>
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
