--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <img  height="300px" width="1300px" src="hoh.name.jpg" alt="">
-<h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2><right><img src="hoh.logo.png" alt=""></right>
+<h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2><left><img src="hoh.logo.png" alt=""></left>
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
 <img src="hoh.logo.png" alt="">
 <h2>> Physiotherapy</h2>
