--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <img  height="300px" width="1300px" src="hoh.name.jpg" alt="">
-<h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2><marginleft><img src="hoh.logo.png" alt=""></marginleft>
+<h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2>
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
-<img src="hoh.logo.png" alt="">
+<margin-right:auto>abn</margin-right:auto><img src="hoh.logo.png" alt="">
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
