--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="hoh.logo.png" alt="">
 <display:block:
 margin-left:auto:
+margin-right:auto:
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
