--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img  height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2>
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
-<center><img src="hoh.logo.png" alt=""></center>
+<center><img width="100" height="100" "hoh.logo.png" alt=""></center>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
@@ -21,8 +21,6 @@
 <h2>> Pediatric Physiotherapy</h2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
 <h2>Pediatric Physiotherapy Treatment </h2>
-<h2>Neonatal Physiotherapy:</h2>
-<p>These are a set of management protocols focusing on neonates to help them survive. This includes chest physiotherapy, positioning, orofacial stimulation, passive movements, and multimodal sensory-motor stimulation.</p>
 <h2>Neurodevelopmental Physiotherapy:</h2>
 <p>This form of therapy is mainly focused on kids who have neurological disorders with gross motor developmental delay or kids with gross motor developmental delay without any other central nervous system insults. The techniques here aim to achieve gross motor milestones, manage spasticity, and improve balance and coordination. Some techniques include NDT(Neuro Developmental Therapy), CIMT (Constraint Induced Movement Therapy), Vojta technique, taping techniques, functional electrical stimulation, balance and coordination training, including Frenkels exercises. </p>
 <h2>Orthopedic Pediatric Physiotherapy:</h2>
