--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="300px" width="300px" src="hoh.logo.png" align="right" alt="">
-<h2>Dr.Sujitha P BPT,MPT,MIAP.(Specalized Neuro & Pediatric)</h2>
+<h2>Dr.Sujitha P MPT,MIAP.,(Founder of Heaven Of Heal)</h2>
+<h2>(Specalized in Neuro & Pediatric)</h2>
+<h2>Reg No. - L59656</h2>
 <h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
