--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="300px" width="300px" src="hoh.logo.png" align="right" alt="">
-<h2>Dr.Sujitha P MPT,MIAP.,(Founder of Heaven Of Heal)</h2>
-<h2>(Specalized in Neuro & Pediatric)</h2>
-<h2>Reg No. - L59656</h2>
-<h2>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h2>
-
-
+<h2>Dr.Sujitha P MPT,MIAP.,</h2>
+<h3>(Specalized in Neuro & Pediatric)</h3>
+<h3>Reg No. - L59656</h3>
+<H3>Founder-Heaven of Heals</H3>
+<h3>Ph - +91 8072142229 Mail - heavenofheal.1995@gmail.com</h3>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
