--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 Here the treatment includes using machines to relieve pain and spasms, scar mobilization, stretching and strengthening of the muscles, endurance training, contrast therapy, and heat and cold therapy.</p>
 <h2>Cardiopulmonary Pediatric Physiotherapy:</h2>
 <p>While the principles of the techniques used here remain quite the same as adults, the application change as this population is constantly growing. Techniques include chest physiotherapy, positioning, breathing exercises, respiratory muscle strengthening, and energy conservation techniques.</p>
+<h2>>Occupational Therapy</h2>
+<img width="1300" src="ot.img.webp" alt="">
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
