--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
-<p>HOT OR COLD THERAPY: Both hot and cold therapy help to manage pain but each has a different effect on your body. Hot therapy involves using hot packs, warm towels, or heating pads to increase blood flow and relax muscles to reduce stiffness. Cold therapy involves using ice packs, cold compresses, or ice baths to reduce swelling and inflammation, and to numb an area in order to provide pain relief.</p>
+<h3>HOT OR COLD THERAPY:</h3> <p>Both hot and cold therapy help to manage pain but each has a different effect on your body. Hot therapy involves using hot packs, warm towels, or heating pads to increase blood flow and relax muscles to reduce stiffness. Cold therapy involves using ice packs, cold compresses, or ice baths to reduce swelling and inflammation, and to numb an area in order to provide pain relief.</p>
 <p>ELECTRICAL STIMULATION IFT: This type of therapy uses electrical impulses to stimulate the nerves and muscles in the affected area. It helps to manage pain by temporarily blocking pain signals from reaching your brain, by releasing naturally produced pain-relieving chemicals called endorphins which help to reduce pain and promote a sense of well-being, and by relaxing muscles and reducing painful spasms. Depending on the nature of your condition, it may involve the use of a TENS, NMES or IFC unit to deliver the electrical stimulation.</p>
 <p>ULTRASOUND: This type of therapy uses high-frequency sound waves to create thermal and non-thermal effects to help manage pain. Thermal effects refer to the creation of a gentle heat, which can help to relax your muscles, reduce inflammation and reduce pain. The non-thermal effects include cavitation and microstreaming. Cavitation refers to the creation of tiny shock waves and microstreaming refers to the increasing of the movement of cells and fluids within the affected area. Both can help to promote tissue repair and reduce pain.</p>
 <p>TRACTION: Traction is typically used to manage pain in the neck and lower back. It helps by applying a gentle pulling force to the affected area and stretching the spine, thereby reducing pressure on the nerves and discs. Most often this involves a manual traction table.</p>
@@ -24,13 +24,13 @@
 <h2>> Pediatric Physiotherapy</h2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
 <h2>Pediatric Physiotherapy Treatment </h2>
-<h2>Neurodevelopmental Physiotherapy:</h2>
+<h3>Neurodevelopmental Physiotherapy:</h3>
 <p>This form of therapy is mainly focused on kids who have neurological disorders with gross motor developmental delay or kids with gross motor developmental delay without any other central nervous system insults. The techniques here aim to achieve gross motor milestones, manage spasticity, and improve balance and coordination. Some techniques include NDT(Neuro Developmental Therapy), CIMT (Constraint Induced Movement Therapy), Vojta technique, taping techniques, functional electrical stimulation, balance and coordination training, including Frenkels exercises. </p>
-<h2>Orthopedic Pediatric Physiotherapy:</h2>
+<h3>Orthopedic Pediatric Physiotherapy:</h3>
 <p>Kids who receive this service are largely those involved in sports, have congenital deformities, or have met with any injury to their muscles or ligaments. The approach is completely different, with strategies that include treating pain and spasms, improving strength and endurance, and correcting deformities and posture, with the aim of eventually bringing them back to their normal daily activities.
 
 Here the treatment includes using machines to relieve pain and spasms, scar mobilization, stretching and strengthening of the muscles, endurance training, contrast therapy, and heat and cold therapy.</p>
-<h2>Cardiopulmonary Pediatric Physiotherapy:</h2>
+<h3>Cardiopulmonary Pediatric Physiotherapy:</h3>
 <p>While the principles of the techniques used here remain quite the same as adults, the application change as this population is constantly growing. Techniques include chest physiotherapy, positioning, breathing exercises, respiratory muscle strengthening, and energy conservation techniques.</p>
 <h2>>Occupational Therapy</h2>
 <img width="1300" src="ot.img.webp" alt="">
