--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <p>People of all ages can benefit from occupational therapy, whether child or adult, as occupations can be trained and strengthened to improve daily living, health and well-being. However, different age groups have distinct reasons for pursuing occupational therapy, and the skills focused on during therapy, as well as how these skills are practiced, may vary.</p>
 <p>In toddlers and children, for example, a pediatric occupational therapist helps the patient reach developmental milestones, master basic life skills and improve social skills. This may include fine motor skills, learning, playing, school-focused abilities, such as writing and the use of scissors, and activities of daily living.</p>
 <p>Occupational therapy for adults can help patients regain independence, manage chronic conditions and enhance quality of life. While occupational therapy for children helps children meet specific milestones and skills, occupational therapy for adults focuses on restoring an adult’s capabilities to regain their independence.</p>
+<h2>Why Would a Child Need Occupational Therapy?</h2>
+<p>Children who benefit from pediatric occupational therapy may have difficulty with:</p>
+<h3>>Coordination</h3>
+<h3>>Sensory processing</h3>
+<h3>>Cognitive skills</h3>
+<h3>>Self-regulation and coping skills</h3>
+<h3>>Visual-perceptual skills</h3>
+<p>Some common health conditions that may require a child to see a pediatric occupational therapist include:</p>
+<h3>>Autism</h3>
+<h3>>Movement disorders</h3>
+<h3>>Developmental delays</h3>
+<h3>>Cerebral palsy</h3>
+<h3>>Neurotrauma</h3>
+<h3>>Sensory processing disorders</h3>
+<h3>>Learning challenges</h3>
+<h2>Why Would a Adults Need Occupational Therapy?</h2>
+<h3>>Concentration and memory exercises</h3>
+<h3>>Learning and practicing skills for work</h3>
+<h3>>Movement and perception exercises</h3>
+<h3>>Regain or maintain independence</h3>
+<h3>>Improve the quality of life</h3>
+<h3>>Manage chronic conditions</h3>
+<h3>>Prevent future injuries</h3>
+<h2>>Speech  Therapy</h2>
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
