--- a/index.html
+++ b/index.html
@@ -62,6 +62,47 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Prevent future injuries</h3>
 <h2>>Speech  Therapy</h2>
 <img width="1300" src="speech.img" alt="">
+<h2>What do Speech Therapists do?</h2>
+<h3>>Difficulty With Answering Questions</h3>
+<h3>>Difficulty With Following Instruction</h3>
+<h3>>Weak Comprehension Of Stories/Passages</h3>
+<h3>>Weak Social Skills</h3>
+<h3>>Lack Of Communicative Intent</h3>
+<h3>>Voice Disorders</h3>
+<h3>>Dysphagia/Swallowing Difficulties</h3>
+<h3>>Weak Oral Motor Skills</h3>
+<h3>>Dyslexia</h3>
+<h3>>Weak Verbal Reasoning Skills</h3>
+<h3>>Incorrect Use Of Grammar/Sentence Structures</h3>
+<h3>>Limited Vocabulary</h3>
+<h3>>Simple Or Disorganized Narration</h3>
+<h3>>Weak  Imitation Skills</h3>
+<h3>>Speech Sound Errors</h3>
+<h3>>Poor Preverbal Skills</h3>
+<h3>>Stuttering</h3>
+<h2>>Cognitive Behavioral Therapy</h2>
+<img width="1300" src="behaviour.img" alt="">
+<h2>>Who Does CBT Help?</h2>
+<p>CBT is often the first line of therapy for several health conditions. Research has shown CBT to be effective for children and adults who live with the following conditions:</p>
+<h3>>Anxiety Or Panic Attacks</h3>
+<h3>>Depression</h3>
+<h3>>Eating Disorders</h3>
+<h3>>Obsessive-Compulsive Disorders</h3>
+<h3>>Substance Use Disorders</h3>
+<h3>>Bipolar Disorder</h3>
+<h3>>Phobias</h3>
+<h3>>Personality disorders</h3>
+<h3>>Schizophrenia</h3>
+<h3>>Post-Traumatic Stress Disorder</h3>
+<h3>>Fibromyalgia</h3>
+<h3>>Irritable Bowl Syndrome</h3>
+<h3>>Insomnia</h3>
+<h3>>Relationship problems or divorce</h3>
+<h3>>Stress or anger management</h3>
+<h3>>Abandonment or trust issues</h3>
+<h3>>Life changes (e.g., going to college, starting a new job, getting married)</h3>
+<h3>>Time management and procrastination</h3>
+<h3>>Low self-esteem.</h3>
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
