--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 <h2>> Pediatric Physiotherapy</h2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
 <h2>Pediatric Physiotherapy Treatment </h2>
+<h3>Cerebral Palsy:</h3>
+<p>We are following treatment like exercise, massage, and other physical treatments to improve a child's motor skills, balance, flexibility, and strength, aiming to increase their independence and quality of life. Treatments include tailored strength training, stretching to prevent joint stiffness, balance exercises, and gait training to improve walking. Early intervention with physiotherapy gives children the best chance for improvement, with exercises often made fun and engaging to keep the child motivated.</p>
+<h3>Autism Spectrum Disorder (ASD):</h3>
+<p>We addresses common motor difficulties like poor balance, coordination, and strength by improving gross motor skills, body awareness, and sensory processing through play-based and structured exercises. Interventions include activities for motor planning, strengthening, balance training, sensory integration, and hydrotherapy, aiming to increase functional independence and social interaction for children with ASD.</p>
+<h3>Down Syndrome:</h3>
+<p>We focuses on early intervention to improve motor skills, strength, posture, and balance, reducing the impact of muscle weakness and lax ligaments. Therapists create individualized, play-based plans, provide parent education for home-based activities, and help children achieve developmental milestones and greater independence. Interventions often include strength training, balance activities, and exercises to build coordination, while also preventing secondary joint problems and improving overall quality of life.</p>
+<h3>Spina Bifida:</h3>
+<p>We focuses on maximizing a child's functional independence through individualized treatment plans involving exercises, gait training, and the use of assistive devices like braces and wheelchairs. Early intervention is key to establishing baseline function, monitoring muscle imbalances and contractures, and teaching caregivers proper handling and positioning. Goals include improving strength, balance, and mobility, while preventing secondary complications such as pressure sores and joint deformities.</p>
 <h3>Neurodevelopmental Physiotherapy:</h3>
 <p>This form of therapy is mainly focused on kids who have neurological disorders with gross motor developmental delay or kids with gross motor developmental delay without any other central nervous system insults. The techniques here aim to achieve gross motor milestones, manage spasticity, and improve balance and coordination. Some techniques include NDT(Neuro Developmental Therapy), CIMT (Constraint Induced Movement Therapy), Vojta technique, taping techniques, functional electrical stimulation, balance and coordination training, including Frenkels exercises. </p>
 <h3>Orthopedic Pediatric Physiotherapy:</h3><p>Kids who receive this service are largely those involved in sports, have congenital deformities, or have met with any injury to their muscles or ligaments. The approach is completely different, with strategies that include treating pain and spasms, improving strength and endurance, and correcting deformities and posture, with the aim of eventually bringing them back to their normal daily activities.
@@ -62,7 +70,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Prevent future injuries</h3>
 <h2>>Speech  Therapy</h2>
 <img width="1300" src="speech.img" alt="">
-<h2>What do Speech Therapists do?</h2>
+<h2>What Our Speech Therapists do for Child Who have Following Difficulties</h2>
 <h3>>Difficulty With Answering Questions</h3>
 <h3>>Difficulty With Following Instruction</h3>
 <h3>>Weak Comprehension Of Stories/Passages</h3>
@@ -82,8 +90,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Stuttering</h3>
 <h2>>Cognitive Behavioral Therapy</h2>
 <img width="1300" src="behaviour.img" alt="">
-<h2>>Who Does CBT Help?</h2>
-<p>CBT is often the first line of therapy for several health conditions. Research has shown CBT to be effective for children and adults who live with the following conditions:</p>
+<h2>>What Our Behaviour Therapists practicing here</h2>
+<p>CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
 <h3>>Anxiety Or Panic Attacks</h3>
 <h3>>Depression</h3>
 <h3>>Eating Disorders</h3>
