--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <H3>Founder-Heaven of Heals</H3>
 <h3>Ph - +91 8072142229</h3>
 <h3>Mail - heavenofheal.1995@gmail.com</h3>
+<center><img height="200px" width="200px" src="sujitha.img.jpg" alt=""></center>
+<center><h2>Dr.Sujitha P MPT,MIAP., Senior Consultant</h2></center>
+<CEnter><H3>Pediatric & Neuro</H3></CEnter>
+<center><h3>8+years Experience</h3></center>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
@@ -60,7 +64,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Neurotrauma</h3>
 <h3>>Sensory processing disorders</h3>
 <h3>>Learning challenges</h3>
-<h2>Why Would a Adults Need Occupational Therapy?</h2>
+<h2>What would we do an Adults Need Occupational Therapy</h2>
 <h3>>Concentration and memory exercises</h3>
 <h3>>Learning and practicing skills for work</h3>
 <h3>>Movement and perception exercises</h3>
