--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <h3>Ph - +91 8072142229</h3>
 <h3>Mail - heavenofheal.1995@gmail.com</h3>
 <center><img height="200px" width="200px" src="sujitha.img.jpg" alt=""></center>
-<center><h2>Dr.Sujitha P MPT,MIAP., Senior Consultant</h2></center>
+<center><h2>>Dr.Sujitha P MPT,MIAP.,</h2></center>
+<center><h3>Senior consultant</h3></center>
 <CEnter><H3>Pediatric & Neuro</H3></CEnter>
 <center><h3>8+years Experience</h3></center>
 <h2>> Physiotherapy</h2>
