--- a/index.html
+++ b/index.html
@@ -14,10 +14,25 @@
 <h3>Ph - +91 8072142229</h3>
 <h3>Mail - heavenofheal.1995@gmail.com</h3>
 <center><img height="200px" width="200px" src="sujitha.img.jpg" alt=""></center>
-<center><h2>>Dr.Sujitha P MPT,MIAP.,</h2></center>
+<center><h2>>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3>Senior consultant</h3></center>
 <CEnter><H3>Pediatric & Neuro</H3></CEnter>
 <center><h3>8+years Experience</h3></center>
+<center><h2>>Mr.Thirugnana Sammantham BPT</h2></center>
+<CEnter><H3>Concultant physiotherapist</H3></CEnter>
+<center><h3>specialized Orthopedic</h3></center>
+<center><h3>3+years Experience</h3></center>
+<center><h2>>Miss.Bharathi BOT</h2></center>
+<CEnter><h3>Senior Consultant</h3></CEnter>
+<center><h3>Occupational Therapist</h3></center>
+<center><h3>8+Years Experience</h3></center>
+<CEnter><H2>>Mr.Raja BOT</H2></CEnter>
+<CEnter><H3>Occupational Therapist</H3></CEnter>
+<center><h3>3+Years Experience</h3></center>
+<center><h2>>Mrs.Shabana BASLP</h2></center>
+<CEnter><H3>Senior Consultant</H3></CEnter>
+<center><h3>Audiologists and Speech-Language Pathologists</h3></center>
+<center><h3>10+Years Experience</h3></center>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
