--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
-<h2>Dr.Sujitha P MPT,MIAP., (Reg No. - L59656)</h2>
+<h2>Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</h2>
 <h3>(Specalized in Neuro & Pediatric)</h3>
 <H3>Founder-Heaven of Heals</H3>
 <h3>Ph - +91 8072142229</h3>
