--- a/index.html
+++ b/index.html
@@ -13,25 +13,6 @@
 <H3>Founder-Heaven of Heals</H3>
 <h3>Ph - +91 8072142229</h3>
 <h3>Mail - heavenofheal.1995@gmail.com</h3>
-<center><h2>>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
-<center><h3>Senior consultant</h3></center>
-<CEnter><H3>Pediatric & Neuro</H3></CEnter>
-<center><h3>8+years Experience</h3></center>
-<center><h2>>Mr.Thirugnana Sammantham BPT</h2></center>
-<CEnter><H3>Concultant physiotherapist</H3></CEnter>
-<center><h3>specialized Orthopedic</h3></center>
-<center><h3>3+years Experience</h3></center>
-<center><h2>>Miss.Bharathi BOT</h2></center>
-<CEnter><h3>Senior Consultant</h3></CEnter>
-<center><h3>Occupational Therapist</h3></center>
-<center><h3>8+Years Experience</h3></center>
-<CEnter><H2>>Mr.Raja BOT</H2></CEnter>
-<CEnter><H3>Occupational Therapist</H3></CEnter>
-<center><h3>3+Years Experience</h3></center>
-<center><h2>>Mrs.Shabana BASLP</h2></center>
-<CEnter><H3>Senior Consultant</H3></CEnter>
-<center><h3>Audiologists and Speech-Language Pathologists</h3></center>
-<center><h3>10+Years Experience</h3></center>
 <h2>> Physiotherapy</h2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <h2>Passive Treatment Options for Pain Management:</h2>
@@ -130,6 +111,25 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3>>Time management and procrastination</h3>
 <h3>>Low self-esteem.</h3>
+<center><h2>Dr.Sujitha MPT,MIAP,NDT,SI.,</h2></center>
+<center><h3>Senior consultant</h3></center>
+<CEnter><H3>Pediatric & Neuro</H3></CEnter>
+<center><h3>8+years Experience</h3></center>
+<center><h2>>Mr.Thirugnana Sammantham BPT</h2></center>
+<CEnter><H3>Concultant physiotherapist</H3></CEnter>
+<center><h3>specialized Orthopedic</h3></center>
+<center><h3>3+years Experience</h3></center>
+<center><h2>>Miss.Bharathi BOT</h2></center>
+<CEnter><h3>Senior Consultant</h3></CEnter>
+<center><h3>Occupational Therapist</h3></center>
+<center><h3>8+Years Experience</h3></center>
+<CEnter><H2>>Mr.Raja BOT</H2></CEnter>
+<CEnter><H3>Occupational Therapist</H3></CEnter>
+<center><h3>3+Years Experience</h3></center>
+<center><h2>>Mrs.Shabana BASLP</h2></center>
+<CEnter><H3>Senior Consultant</H3></CEnter>
+<center><h3>Audiologists and Speech-Language Pathologists</h3></center>
+<center><h3>10+Years Experience</h3></center>
 <H2>ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
