--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3>>Time management and procrastination</h3>
 <h3>>Low self-esteem.</h3>
-<p></p>
-<p></p>
 <center><h2>Dr.Sujitha MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3>Senior consultant</h3></center>
 <CEnter><H3>Pediatric & Neuro</H3></CEnter>
@@ -132,7 +130,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <CEnter><H3>Senior Consultant</H3></CEnter>
 <center><h3>Audiologists and Speech-Language Pathologists</h3></center>
 <center><h3>10+Years Experience</h3></center>
-<H2>ABOUT US:</H2>
+<H2> style="color: purple;">ABOUT US:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 
 <center><H2>Address: No.2/249, padavattamman kovil street, thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
