--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 <body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
-<h2>Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</h2>
+<H2 style="color: blueviolet;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
 <h3>(Specalized in Neuro & Pediatric)</h3>
 <H3>Founder-Heaven of Heals</H3>
 <h3>Ph - +91 8072142229</h3>
 <h3>Mail - heavenofheal.1995@gmail.com</h3>
-<h2>> Physiotherapy</h2>
+<H2 style="color: blueviolet;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
-<h2>Passive Treatment Options for Pain Management:</h2>
+<H2 style="color: blueviolet;">Passive Treatment Options for Pain Management:</H2>
 <h3>Hot Or Cold Therapy:</h3> <p>Both hot and cold therapy help to manage pain but each has a different effect on your body. Hot therapy involves using hot packs, warm towels, or heating pads to increase blood flow and relax muscles to reduce stiffness. Cold therapy involves using ice packs, cold compresses, or ice baths to reduce swelling and inflammation, and to numb an area in order to provide pain relief.</p>
 <h3>Electrical Stimulation/IFT:</h3> <p>This type of therapy uses electrical impulses to stimulate the nerves and muscles in the affected area. It helps to manage pain by temporarily blocking pain signals from reaching your brain, by releasing naturally produced pain-relieving chemicals called endorphins which help to reduce pain and promote a sense of well-being, and by relaxing muscles and reducing painful spasms. Depending on the nature of your condition, it may involve the use of a TENS, NMES or IFC unit to deliver the electrical stimulation.</p>
 <h3>Ultrasound:</h3> <p>This type of therapy uses high-frequency sound waves to create thermal and non-thermal effects to help manage pain. Thermal effects refer to the creation of a gentle heat, which can help to relax your muscles, reduce inflammation and reduce pain. The non-thermal effects include cavitation and microstreaming. Cavitation refers to the creation of tiny shock waves and microstreaming refers to the increasing of the movement of cells and fluids within the affected area. Both can help to promote tissue repair and reduce pain.</p>
 <h3>Traction:</h3> <p>Traction is typically used to manage pain in the neck and lower back. It helps by applying a gentle pulling force to the affected area and stretching the spine, thereby reducing pressure on the nerves and discs. Most often this involves a manual traction table.</p>
 <h3>Manual Therapy:</h3> <p>Manual therapy is a hands-on treatment that involves the manipulation of muscles, joints, and soft tissues to help manage pain and improve mobility. It includes massage therapy, myofascial release, soft tissue mobilization, and joint mobilization. Massage therapy helps to reduce muscle tension, increase blood flow, and promote relaxation using various techniques such as stroking, kneading, and friction. Myofascial release helps to reduce pain and improve flexibility through the manipulation of the fascia, which is a layer of connective tissue that surrounds muscles and organs. Soft tissue mobilization helps to reduce pain and improve flexibility by manipulating the ligaments, tendons, and fascia surrounding a joint. And, joint mobilization helps to reduce pain and improve mobility by gently moving a joint through its range of motion.  </p>
-<h2>> Pediatric Physiotherapy</h2>
+<H2 style="color: blueviolet;">>Pediatric Physiotherapy</H2>
 <img width="1300px" src="pediatric2.img.jpg" alt="">
-<h2>Pediatric Physiotherapy Treatment </h2>
+<H2 style="color: blueviolet;">Pediatric Physiotherapy Treatment</H2>
 <h3>Cerebral Palsy:</h3>
 <p>We are following treatment like exercise, massage, and other physical treatments to improve a child's motor skills, balance, flexibility, and strength, aiming to increase their independence and quality of life. Treatments include tailored strength training, stretching to prevent joint stiffness, balance exercises, and gait training to improve walking. Early intervention with physiotherapy gives children the best chance for improvement, with exercises often made fun and engaging to keep the child motivated.</p>
 <h3>Autism Spectrum Disorder (ASD):</h3>
@@ -39,13 +39,13 @@
 Here the treatment includes using machines to relieve pain and spasms, scar mobilization, stretching and strengthening of the muscles, endurance training, contrast therapy, and heat and cold therapy.</p>
 <h3>Cardiopulmonary Pediatric Physiotherapy:</h3>
 <p>While the principles of the techniques used here remain quite the same as adults, the application change as this population is constantly growing. Techniques include chest physiotherapy, positioning, breathing exercises, respiratory muscle strengthening, and energy conservation techniques.</p>
-<h2>>Occupational Therapy</h2>
+<H2 style="color: blueviolet;">>Occupational Therapy</H2>
 <img width="1300" src="ot.img.webp" alt="">
-<h2>Who Needs Occupational Therapy?</h2>
+<H2 style="color: blueviolet;">Who Needs Occupational Therapy?</H2>
 <p>People of all ages can benefit from occupational therapy, whether child or adult, as occupations can be trained and strengthened to improve daily living, health and well-being. However, different age groups have distinct reasons for pursuing occupational therapy, and the skills focused on during therapy, as well as how these skills are practiced, may vary.</p>
 <p>In toddlers and children, for example, a pediatric occupational therapist helps the patient reach developmental milestones, master basic life skills and improve social skills. This may include fine motor skills, learning, playing, school-focused abilities, such as writing and the use of scissors, and activities of daily living.</p>
 <p>Occupational therapy for adults can help patients regain independence, manage chronic conditions and enhance quality of life. While occupational therapy for children helps children meet specific milestones and skills, occupational therapy for adults focuses on restoring an adult’s capabilities to regain their independence.</p>
-<h2>Why Would a Child Need Occupational Therapy?</h2>
+<H2 style="color: blueviolet;">Why Would a Child Need Occupational Therapy?</H2>
 <p>Children who benefit from pediatric occupational therapy may have difficulty with:</p>
 <h3>>Coordination</h3>
 <h3>>Sensory processing</h3>
@@ -60,7 +60,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Neurotrauma</h3>
 <h3>>Sensory processing disorders</h3>
 <h3>>Learning challenges</h3>
-<h2>What would we do an Adults Need Occupational Therapy</h2>
+<H2 style="color: blueviolet;">What would we do an Adults Need Occupational Therapy</H2>
 <h3>>Concentration and memory exercises</h3>
 <h3>>Learning and practicing skills for work</h3>
 <h3>>Movement and perception exercises</h3>
@@ -68,9 +68,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Improve the quality of life</h3>
 <h3>>Manage chronic conditions</h3>
 <h3>>Prevent future injuries</h3>
-<h2>>Speech  Therapy</h2>
+<H2 style="color: blueviolet;">>Speech  Therapy</H2>
 <img width="1300" src="speech.img" alt="">
-<h2>What Our Speech Therapists do for Child Who have Following Difficulties</h2>
+<H2 style="color: blueviolet;">What Our Speech Therapists Specialized for Child Who have Following Difficulties</H2>
 <h3>>Difficulty With Answering Questions</h3>
 <h3>>Difficulty With Following Instruction</h3>
 <h3>>Weak Comprehension Of Stories/Passages</h3>
@@ -88,9 +88,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Speech Sound Errors</h3>
 <h3>>Poor Preverbal Skills</h3>
 <h3>>Stuttering</h3>
-<h2>>Cognitive Behavioral Therapy</h2>
+<H2 style="color: blueviolet;">>Cognitive Behavioral Therapy</H2>
 <img width="1300" src="behaviour.img" alt="">
-<h2>>What Our Behaviour Therapists practicing here</h2>
+<H2 style="color: blueviolet;">>What Our Behaviour Therapists practicing here</H2>
 <p>CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
 <h3>>Anxiety Or Panic Attacks</h3>
 <h3>>Depression</h3>
@@ -126,14 +126,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <CEnter><H2>>Mr.Raja BOT</H2></CEnter>
 <CEnter><H3>Occupational Therapist</H3></CEnter>
 <center><h3>3+Years Experience</h3></center>
-<center><h2>>Mrs.Shabana BASLP</h2></center>
-<CEnter><H3>Senior Consultant</H3></CEnter>
-<center><h3>Audiologists and Speech-Language Pathologists</h3></center>
-<center><h3>10+Years Experience</h3></center>
-<H2>ABOUT US:</H2>
+<H2 style="color: blueviolet;">About Us:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
-
-<center><H2>Address: No.2/249, padavattamman kovil street, thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
-<h2 style="color: purple;">ABOUT US</h2>
+<center><H2>Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 </body>
 </html>
