--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3>>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3>>Time management and procrastination</h3>
 <h3>>Low self-esteem.</h3>
-<center><h2>Dr.Sujitha MPT,MIAP,NDT,SI.,</h2></center>
+<center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3>Senior consultant</h3></center>
 <CEnter><H3>Pediatric & Neuro</H3></CEnter>
 <center><h3>8+years Experience</h3></center>
-<center><h2>>Mr.Thirugnana Sammantham BPT</h2></center>
+<center><h2 style="color: blueviolet;">>Mr.Thirugnana Sammantham BPT</h2></center>
 <CEnter><H3>Concultant physiotherapist</H3></CEnter>
 <center><h3>specialized Orthopedic</h3></center>
 <center><h3>3+years Experience</h3></center>
-<center><h2>>Miss.Bharathi BOT</h2></center>
+<center><h2 style="color: blueviolet;">>Miss.Bharathi BOT</h2></center>
 <CEnter><h3>Senior Consultant</h3></CEnter>
 <center><h3>Occupational Therapist</h3></center>
 <center><h3>8+Years Experience</h3></center>
