--- a/index.html
+++ b/index.html
@@ -116,19 +116,18 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3 style="color: gray;">>Time management and procrastination</h3>
 <h3 style="color: gray;">>Low self-esteem.</h3>
-<center><h2 style="color: purple;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
+<center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3 style="color: purple;">Senior consultant</h3></center>
 <CEnter><H3 style="color: purple;">Pediatric & Neuro</H3></CEnter>
 <center><h3 style="color: purple;">8+years Experience</h3></center>
-<center><h2 style="color: purple;">>Mr.Thirugnana Sammantham BPT</h2></center>
+<center><h2 style="color: blueviolet;">>Mr.Thirugnana Sammantham BPT</h2></center>
 <CEnter><H3 style="color: purple;">Concultant physiotherapist</H3></CEnter>
-<center><h3 style="color: purple;">specialized Orthopedic</h3></center>
 <center><h3 style="color: purple;">3+years Experience</h3></center>
-<center><h2 style="color: purple;">>Miss.Bharathi BOT</h2></center>
+<center><h2 style="color: blueviolet;">>Miss.Bharathi BOT</h2></center>
 <CEnter><h3 style="color: purple;">Senior Consultant</h3></CEnter>
 <center><h3 style="color: purple;">Occupational Therapist</h3></center>
 <center><h3 style="color: purple;">8+Years Experience</h3></center>
-<CEnter><H2 style="color: purple;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
+<CEnter><H2 style="color: blueviolet;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
 <CEnter><H3 style="color: purple;">Consultant Occupational Therapist</H3></CEnter>
 <center><h3 style="color: purple;">3+Years Experience</h3></center>
 <H2 style="color: sandybrown;">About Us:</H2>
