--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
-<H2 style="color: blueviolet;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
+<H2 style="color: brown;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
 <h3 style="color: blueviolet;">(Specalized in Neuro & Pediatric)</h3>
 <H3 style="color: blueviolet;">Founder-Heaven of Heals</H3>
 <h3 style="color: blueviolet;">Ph - +91 8072142229</h3>
