--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <img height="300px" width="1300px" src="hoh.name.jpg" alt="">
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
 <H2 style="color: brown;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
-<h3 style="color: blueviolet;">(Specalized in Neuro & Pediatric)</h3>
-<H3 style="color: blueviolet;">Founder-Heaven of Heals</H3>
-<h3 style="color: blueviolet;">Ph - +91 8072142229</h3>
-<h3 style="color: blueviolet;">Mail - heavenofheal.1995@gmail.com</h3>
+<h3 style="color: brown;">(Specalized in Neuro & Pediatric)</h3>
+<H3 style="color: brown;">Founder-Heaven of Heals</H3>
+<h3 style="color: brown;">Ph - +91 8072142229</h3>
+<h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <H2 style="color: sandybrown;">Passive Treatment Options for Pain Management:</H2>
@@ -132,6 +132,6 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <center><h3 style="color: purple;">3+Years Experience</h3></center>
 <H2 style="color: sandybrown;">About Us:</H2>
 <p>Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
-<center><H2 style="color: red;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
+<center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 </body>
 </html>
