--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <H2 style="color: sandybrown;">>Cognitive Behavioral Therapy</H2>
 <img width="1300" src="behaviour.img" alt="">
 <H2 style="color: sandybrown;">>What Our Behaviour Therapists practicing here</H2>
-<p>CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
+<p style="color: rgb(53, 50, 50);">CBT is often the first line of therapy for several health conditions. Heaven Of Heals has shown CBT to be effective for children and adults who live with the following conditions:</p>
 <h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
 <h3 style="color: gray;">>Depression</h3>
 <h3 style="color: gray;">>Eating Disorders</h3>
