--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <H3 style="color: brown;">Founder-Heaven of Heals</H3>
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
-<img src="wats.img" alt="">
-<h3>For Appointment: https://wa.me/918072142229</h3>
+<center><img height="250px" width="250px" src="wats.img" alt=""></center>
+<center><h3>For Appointment: <a>https://wa.me/918072142229</a></h3></center>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <H2 style="color: sandybrown;">Passive Treatment Options for Pain Management:</H2>
