--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
 <center><img height="250px" width="250px" src="wats.img" alt=""></center>
-<a href="https://wa.me/918072142229">Other page</a>
+<a href="https://wa.me/918072142229">CLICK HERE</a>
 <a>https://wa.me/918072142229</a>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
