--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
 <center><img height="250px" width="250px" src="wats.img" alt=""></center>
-<Center><a href="https://wa.me/918072142229">CLICK HERE</a></Center>
+<Center><a href="https://wa.me/918072142229">For Appointment CLICK HERE</a></Center>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
 <H2 style="color: sandybrown;">Passive Treatment Options for Pain Management:</H2>
