--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <H3 style="color: brown;">Founder-Heaven of Heals</H3>
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
-<center><img height="250px" width="250px" src="wats.img" alt=""></center>
+<position:absolute><center><img height="250px" width="250px" src="wats.img" alt=""></center></position:absolute>
 <Center><a href="https://wa.me/918072142229">For Appointment CLICK HERE</a></Center>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
@@ -132,7 +132,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <CEnter><H2 style="color: blueviolet;">>Mr.Raja R BOT, ABA.,</H2></CEnter>
 <CEnter><H3 style="color: purple;">Consultant Occupational Therapist</H3></CEnter>
 <center><h3 style="color: purple;">3+Years Experience</h3></center>
-<position:absolute><H2 style="color: sandybrown;">About Us:</H2></position:absolute>
+<H2 style="color: sandybrown;">About Us:</H2>
 <p style="color: rgb(53, 50, 50);">Heaven of heal is a physio clinic they are working for  pain,paediatric,geatric,sports,neurological connditions and fitness training. this center has modalities like IFT, wax, ultrasound, traction, stimulation SWD. we are working for paediatric conditions and treatment has given  by manual, exercise, play therapy, functional theerapy, feeding therapy, behaviour therapy, occupational therapy and speech therapy. our team working for various conditions like neck pain, sciatica, disc bulges, plantar facilities, ligaments sprains, muscle strains, stroke cp, autism, paraplegia, hyperactivity, autism spectrum disorders, down syndrome spinabifida, hemiparesis, dyslexia, delayed milestones and sensory issues.</p>
 <center><H2 style="color: brown;">Address: No.2/249, padavattamman kovil street,Thalambur, chennai - 600130,Contact - 8072142229,7092092344.</H2></center>
 </body>
