--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <H3 style="color: brown;">Founder-Heaven of Heals</H3>
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
-<img height="250px" width="250px" src="wats.img" align="center" alt="">
+<Center><img height="250px" width="250px" src="wats.img" alt=""></Center>
 <Center><a href="https://wa.me/918072142229">For Appointment CLICK HERE</a></Center>
 <H2 style="color: sandybrown;">>Physiotherapy</H2>
 <img width="1300px" src="pain.img.jpg" alt="">
