--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img height="250px" width="250px" src="hoh.logo.png" align="right" alt="">
 <H2 style="color: brown;">Dr.Sujitha P MPT,MIAP,NDT,SI.,(Reg No. - L59656)</H2>
 <h3 style="color: brown;">(Specalized in Neuro & Pediatric)</h3>
-<H3 style="color: brown;">Founder-Heaven of Heals</H3>
+<H3 style="color: brown;">Founder-Heaven of Heal</H3>
 <h3 style="color: brown;">Ph - +91 8072142229</h3>
 <h3 style="color: brown;">Mail - heavenofheal.1995@gmail.com</h3>
 <Center><img height="250px" width="250px" src="wats2.img" alt=""></Center>
