--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3 style="color: gray;">>Time management and procrastination</h3>
 <h3 style="color: gray;">>Low self-esteem.</h3>
+row-gap: 20px; /* Sets a 20px gap between rows */
 <center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3 style="color: purple;">Senior consultant</h3></center>
 <CEnter><H3 style="color: purple;">Pediatric & Neuro</H3></CEnter>
