--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Life changes (e.g., going to college, starting a new job, getting married)</h3>
 <h3 style="color: gray;">>Time management and procrastination</h3>
 <h3 style="color: gray;">>Low self-esteem.</h3>
-<center><h2 style="color: blueviolet;">Meet  Our Experts</h2></center>
-<center><h3 style="color: blueviolet;">Care you,at every step of the way</h3></center>
-<center><h2 style="color: purple;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
+<center><h2 style="color: purple;">Meet  Our Experts</h2></center>
+<center><h4 style="color: purple;">Care you,at every step of the way</h4></center>
+<center><h2 style="color: blueviolet;">>Dr.Sujitha P MPT,MIAP,NDT,SI.,</h2></center>
 <center><h3 style="color: peru;">Senior consultant</h3></center>
 <CEnter><H3 style="color: peru;">Pediatric & Neuro</H3></CEnter>
 <center><h3 style="color: peru;">8+years Experience</h3></center>
