--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Anxiety Or Panic Attacks</h3>
 <h3 style="color: gray;">>Depression</h3>
 <h3 style="color: gray;">>Eating Disorders</h3>
+<div class="sentence-container">
+  <span class="left-text">>Depression</span>
+  <span class="right-text">>Eating Disorders</span>
+</div>
 <h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3>
 <h3 style="color: gray;">>Substance Use Disorders</h3>
 <h3 style="color: gray;">>Bipolar Disorder</h3>
