--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <h3 style="color: gray;">>Depression</h3>
 <h3 style="color: gray;">>Eating Disorders</h3>
 <div class="sentence-container">
-  <span class="left-text">>Depression</span>
-  <span class="right-text">>Eating Disorders</span>
+  <h3 class="left-text">>Depression</h3>
+  <h3 class="center-text">>Eating Disorders</h3>
 </div>
 <h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3>
 <h3 style="color: gray;">>Substance Use Disorders</h3>
