--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 
 <table>
   <tr>
-    <th>Header 1</th>
-    <th>Header 2</th>
+    <th align="left" style="color: gray;">>Anxiety Or Panic Attacks</th>
+    <th align="center" style="color: gray;">>Depression</th>
   </tr>
 </table>
 </body>
