--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table>
   <tr>
     <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
-    <th><center><h3 style="color: gray;">>Depression</h3></center></th>
+    <th><h3 align="right" style="color: gray;">>Depression</h3></th>
   </tr>
 </table>
 </body>
