--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
     <th><h3 style="color: gray;">>Anxiety Or Panic Attacks</h3></th>
     <th><h3 style="color: gray;">>Depression</h3></th>
   </tr>
+  <tr>
+    <th><h3 style="color: gray;">>Eating Disorders</h3></th>
+    <th><h3 style="color: gray;">>Obsessive-Compulsive Disorders</h3></th>
+  </tr>
 </table>
 <table width="50%">
   <tr>
@@ -197,7 +201,7 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
 <table width="50%">
   <tr>
     <th><h3 style="color: gray;">>Low self-esteem</h3></th>
-    <th><h3 style="color: gray;">Aggressive</h3></th>
+    <th><h3 style="color: gray;">>Aggressive</h3></th>
   </tr>
 </table>
 </body>
