--- a/index.html
+++ b/index.html
@@ -146,5 +146,6 @@ Here the treatment includes using machines to relieve pain and spasms, scar mobi
         <div class="text-item">
             This is the second piece of text within the column.
         </div>
+    </div>
 </body>
 </html>
